# lotterie_eth

./: .gitmodules  README.md  lotterie.md
lotterie-hub/: README.md  angular.json  package-lock.json  package.json  patch.js
lotterie-hub/src/: index.html
lotterie-hub/src/app/: app-routing.module.ts  app.component.html  app.component.ts  (+4 more)
pwasm/: Cargo.toml  README.md  build.sh  gen_rand.sh
pwasm/src/: lib.rs  lotterie.rs  params.rs
pwasm/web3/: config  deploy.js  deploy_test.js  get_tr.sh  package-lock.json  package.json  query.js  script.js  wasm-dev-chain.json
solidity/: package-lock.json
solidity/contracts/: Author.sol  Lotterie.sol  LotterieBase.sol  LotterieConf.sol  LotterieMargins.sol  LotterieParams.sol  LotteriePhases.sol
solidity/test/: TestLotterie.sol  lotterie.js
solidity2/: README.md  index.js  package-lock.json  package.json  script.js  truffle.js
solidity2/contracts/: ERC20L.sol  ERC20Test.sol  ERC223ForTruffle.sol  ERC223L.sol  ERC223Test.sol  ERC721Test.sol  FromLotterie.sol  Lotterie.sol  LotterieBase.sol  LotterieConf.sol  LotterieIf.sol  LotterieLib.sol  LotterieMargins.sol  LotterieParam.sol  LotterieParams.sol  LotteriePayment.sol  LotteriePhases.sol  LotterieThrow.sol  LotterieThrow20.sol  LotterieThrow223.sol  LotterieThrow223Dcall.sol  LotterieThrow721.sol  LotterieThrowEther.sol  LotterieThrowProxy.sol  Thrower.sol
solidity2/migrations/: 2_deploy_contracts.js
solidity2/test/: TestLotterie.sol  lotterie.js  sc.js  sc2.js
solidity2/tools/: README.md  build.sh  index.html  main.js  package-lock.json  package.json
(+124 files in other folders)
