[package]
name = "lotterie-eth"
version = "0.1.0"
authors = ["Chevalier Emeric <emericchevalier.pro@gmail.com>"]

[dependencies]
#bincode-no-std = "1.0.0"
bincode = { version = "1.0.0", path = "./deps/bincode" }
#serde = { version = "1.0.47", default-features=false, features = [] }
serde = { path = "./deps/serde/serde", default-features=false, features = [] }
serde_derive = "1.0.47"
pwasm-std = "0.6"
pwasm-ethereum = "0.3"
#pwasm-abi = "0.1"
[dependencies.pwasm-abi]
version = "0.1"
git = "https://github.com/cheme/pwasm-abi.git"

[dependencies.pwasm-abi-derive]
version = "0.1"
git = "https://github.com/cheme/pwasm-abi.git"

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[lib]
crate-type = ["cdylib"]

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
